hphp/test/slow/variadic_args/lambdas_variadic_trailing_non_variadic_2.php.expectf
Fatal error: A variadic parameter ('...') may only appear at the end of a parameter list. in %s/test/slow/variadic_args/lambdas_variadic_trailing_non_variadic_2.php on line 6